fix: whitespace-nowrap on buttonCreate

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -26,7 +26,7 @@
   @apply flex items-center justify-start border-0 rounded-md w-full py-1 hover:bg-white hover:bg-opacity-20;
 }
 .buttonCreate {
-  @apply flex items-center justify-start border-0 w-full pt-1 pb-4 cursor-pointer hover:font-semibold;
+  @apply flex items-center justify-start border-0 w-full pt-1 pb-4 cursor-pointer hover:font-semibold whitespace-nowrap;
 }
 .disabled {
   @apply opacity-30 cursor-default;
